Adjusted spacing, fixed navbar, added some plan enlarge photo.

--- a/john_src/styles/alarimain.css
+++ b/john_src/styles/alarimain.css
@@ -111,6 +111,7 @@ body{
 
 .section p{
 	font-size: 0.95em;
+	font-size: 14px;
 	color: #2d2e30;
 	text-align: center;
 	width: 85%;
